# alShaders2

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL  LICENSE  README  README.md  package.in.py  uigen.py  util.hpp
a2_integrator/: CMakeLists.txt  a2_integrator.cpp
a2_uber/: CMakeLists.txt  a2_conductor.cpp  a2_dielectric.cpp  a2_interior.cpp  a2_uber.cpp  bsdf.hpp  bsdf_diffuse.cpp  bsdf_diffuse.hpp  bsdf_ggx_multiscatter.cpp  bsdf_ggx_multiscatter.hpp  bsdf_ggx_multiscatter_conductor.cpp  bsdf_ggx_multiscatter_dielectric.cpp  bsdf_hapke.cpp  bsdf_hapke.hpp  bsdf_microfacet.cpp  bsdf_microfacet.hpp  bsdf_microfacet_conductor.cpp  bsdf_microfacet_dielectric.cpp  bsdf_microfacet_refraction.cpp  bsdf_microfacet_refraction.hpp  bsdf_stack.cpp  bsdf_stack.hpp  fresnel.hpp  layer_dielectric.cpp  layer_dielectric.hpp  lut.hpp  lut_ggx_E.hpp  lut_ggx_E_avg.hpp  lut_ggx_F.hpp  lut_output.hpp
cmake/: FindArnold.cmake  shader.cmake
common/: CMakeLists.txt  Color.cpp  Color.h  Remap.h  a2_assert.hpp  alRemap.mel  alShaders.py  alUtil.cpp  alUtil.h  alsIdWindow.mel  alsUtil.mel  als_lg.psd  aovs.h  exr.cpp  exr.h  fresnel.cpp  fresnel.h  ids.h  shelf_alShaders.mel  stats.h  tea.h  util.hpp
config/: config.h.in
cryptomatte/: CMakeLists.txt  cryptomatte.cpp  cryptomatte.h  cryptomatte.ui  cryptomatte_aov.cpp  cryptomatte_aov.ui  cryptomatte_filter.cpp  cryptomatte_loader.cpp  cryptomatte_manifest_driver.cpp  cryptomatte_shader.cpp  cryptomatte_tests.h  filters.h  loader.cpp
data/: integrator.ass
docs/: cryptomatte.md
tests/: __main__.py  cryptomatte_tests.py  tests.py
tests/cryptomatte/: 000_mtoa_basic.ass  001_sidecars.ass  002_multicam.ass  003_multicam_sidecars.ass  00_mtoa_basic.ass  010_htoa_instances.ass  01_htoa_instances.ass  020_custom.ass  020_custom_cryptomattes.ass  030_jpeg_driver.ass
tests/cryptomatte/000_correct/: beauty.tif  crypto_asset.exr  crypto_material.exr  crypto_object.exr  log.txt
tests/cryptomatte/001_correct/: beauty.tif  crypto_asset.exr  crypto_material.crypto_material.json  crypto_material.exr  crypto_object.crypto_object.json  crypto_object.exr  custom_crypto_object.exr  custom_crypto_object.my_crypto_object.json  log.txt  special_chars.exr  special_chars.special_chars.json
tests/cryptomatte/002_correct/: camera1_bty.tif  camera1_crypto_asset.exr  camera1_crypto_material.exr  camera1_special_chars.exr  camera2_bty.tif  camera2_crypto_asset.exr  camera2_crypto_material.exr  camera2_special_chars.exr  log.txt
tests/cryptomatte/003_correct/: camera1.crypto_asset.json  camera1.crypto_material.json  camera1.exr  camera2.exr  log.txt
tests/cryptomatte/00_correct/: crypto_asset.exr  crypto_material.exr  log.txt
tests/cryptomatte/010_correct/: result.exr
tests/cryptomatte/01_correct/: log.txt  result.exr
tests/cryptomatte/020_correct/: custom_crypto_asset.exr  custom_crypto_material.exr  custom_crypto_object.exr  log.txt
tests/cryptomatte/030_correct/: log.txt
